# asili-agents

./: .dockerignore  .env.example  .gitignore  BY_HAND.md  DEMO_SCRIPT.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
design_handoff_ops_console/: Asili Operations Console.html  README.md  ops-console.jsx  ops-data.jsx  ops-parts.jsx  shared.jsx  themes.jsx
docs/: API.md  ARCHITECTURE.md  BUSINESS.md  DEVELOPMENT.md  TELEGRAM.md  TRUST_SCORECARD.md
scripts/: deploy.sh  seed_atlas.py  set_telegram_webhook.py  setup-gcp.sh
src/asili_agents/: __init__.py  cli.py  config.py  demo.py  runner.py
src/asili_agents/agents/: __init__.py  baseline.py  content.py  mcp_tools.py  messaging.py  operations_manager.py  pricing.py
src/asili_agents/api/: __init__.py  main.py
src/asili_agents/data/: __init__.py  channel_store.py  models.py  mongo_repository.py  repository.py  seed.py  seed_tenants.py  store.py
src/asili_agents/eval/: __init__.py  runner.py  scenarios.py  scoring.py
src/asili_agents/grounding/: __init__.py  vertex_search.py
src/asili_agents/integrations/: __init__.py  secrets.py  telegram.py
src/asili_agents/integrations/channels/: __init__.py  base.py  instagram.py  meta_common.py  registry.py  telegram.py  whatsapp.py
src/asili_agents/tools/: __init__.py  approvals.py  autonomy.py  catalog.py  channel.py  content.py  cost.py  followups.py  logging.py  pricing.py
src/asili_agents/web/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_api_security.py  test_approvals.py  test_autonomy.py  test_channel.py  test_channels.py  test_cost.py  test_eval.py  test_mcp_tools.py  test_models.py  test_mongo_repository.py  test_runner.py  test_store.py  test_telegram.py  test_tools_catalog.py  test_tools_content.py  test_tools_followups.py  test_tools_logging.py  test_tools_pricing.py
