[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asili-agents"
version = "0.1.0"
description = "AI Operations Team for micro-sellers - Google ADK multi-agent system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jeremiah Sakuda" }
]
keywords = ["adk", "google-agents", "multi-agent", "vertex-ai", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-adk>=0.3.0",
    "google-cloud-aiplatform>=1.38.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "pymongo>=4.6.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/Jeremiah-Sakuda/asili-agents"
Repository = "https://github.com/Jeremiah-Sakuda/asili-agents"

[project.scripts]
asili-agents = "asili_agents.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/asili_agents"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "UP042",  # prefer StrEnum (we use str, Enum for compatibility)
]

[tool.ruff.lint.isort]
known-first-party = ["asili_agents"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
# Pydantic's `@computed_field` over `@property` is a supported, idiomatic pattern
# that mypy flags as "decorators on top of @property"; disable that false positive.
disable_error_code = ["prop-decorator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/asili_agents --cov-report=term-missing"

[tool.coverage.run]
source = ["src/asili_agents"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
